--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.24",
     "jose": "^5.6.3",
     "lucide-react": "^0.426.0",
     "mongodb": "^6.8.0",
